# xori

./: .gitignore  AUTHORS.md  Cargo.toml  README.md  xori.json.example
doc/: aliases.js  search-index.js
doc/flirtunzip/: FlirtSigHeader.t.html  IdaAppType.t.html  IdaArchType.t.html  IdaFileType.t.html  IdaOsType.t.html  all.html  enum.IdaAppType.html  enum.IdaArchType.html  enum.IdaFileType.html  enum.IdaOsType.html  index.html  sidebar-items.js  struct.FlirtSigHeader.html
doc/peinfo/: all.html  index.html
doc/pesymbols/: PdbDir.t.html  all.html  index.html  struct.PdbDir.html
doc/xori/: accessor.m.html  all.html  index.html  macro.accessor.html  macro.as_mut!.html  macro.as_mut.html  macro.as_ref.html  macro.debug.html  macro.disasm_debug.html
docker/: Dockerfile  README.md  docker-compose.yml  xori-api.conf  xori-gui.conf
docs/: aliases.js  search-index.js
docs/adler32/: all.html  fn.adler32.html  index.html  struct.RollingAdler32.html
docs/aho_corasick/: index.html  struct.AcAutomaton.html  struct.Dense.html  struct.FullAcAutomaton.html  struct.Match.html  struct.Matches.html  struct.MatchesOverlapping.html  struct.Sparse.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html  trait.Automaton.html  trait.Transitions.html  type.StateIdx.html
docs/argparse/: DecrBy.t.html  FromCommandLine.t.html  IncrBy.t.html  ParseCollect.t.html  ParseList.t.html  ParseOption.t.html  Print.t.html  PushConst.t.html  StoreConst.t.html  StoreFalse.t.html  StoreOption.t.html  StoreTrue.t.html  all.html  index.html  sidebar-items.js  struct.Collect.html  struct.DecrBy.html  struct.IncrBy.html  (+13 more)
examples/: dump_functions.rs  hi_world.c  hiworld  simple_bin.rs  simple_disasmx86.rs
gui/: .gitignore  README.md  package-lock.json  package.json
src/: configuration.rs  disasm.rs  lib.rs  log.rs  main.rs  test.rs
(+10318 files in other folders)
