[package]
name = "xori"
version = "0.0.1"
authors = [ "amanda@endgame.com" ]

[profile.release]
debug = true

[dependencies]
nom = "5.1.1"
num = "0.2.1"
colored = "1.9.3"
memmap = "0.7.0"
serde_json = "1.0.48"
serde = "1.0.105"
serde_derive = "1.0.105"
argparse = "0.2.2"
bincode = "1.2.1"
encoding = "0.2.33"
reqwest = "0.9.24"
url = "1.7.2"
pdb = "0.6.0"
base64 = "0.12.0"
uuid = { version = "0.8.1", features = ["v4"] }
regex = "1.3.5"
itertools = "0.9.0"
glob = "0.3.0"
crc = "1.8.1"
flate2 = { version = "1.0.14", features = ["zlib"], default-features = false }
