[package]
name = "xori"
version = "0.0.1"
authors = [ "amanda@endgame.com" ]

[profile.release]
debug = true

[dependencies]
argparse = "0.2.2"
base64 = "0.12.2"
bincode = "1.3.1"
colored = "1.9.3"
crc = "1.8.1"
encoding = "0.2.33"
flate2 = { version = "1.0.14", features = [ "zlib" ], default-features = false }
glob = "0.3.0"
itertools = "0.9.0"
memmap = "0.7.0"
nom = "5.1.2"
num = "0.2.1"
pdb = "0.6.0"
regex = "1.3.9"
reqwest = "0.9.24"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.55"
url = "1.7.2"
uuid = { version = "0.8.1", features = [ "v4" ] }
